# test_geometry

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py
test_geometry/: planimetry.py  stereometry.py
