[metadata]
name = test_geometry
version = 0.0.1
author = Andrey Bessalov
author_email = a.bessalov@gmail.com
description = Package for testing pip uploading
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abessalov/test_geometry
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True